src/ui/snapshots/kvn_tui__ui__layout__tests__undersized_terminal_shows_resize_message_instead_of_ui@69x15.snap
---
source: src/ui/layout.rs
expression: output
---
                                                                     
                                                                     
                                                                     
                                                                     
                                                                     
                                                                     
                         Terminal too small                          
                   Minimum: 70×15  Current: 69×15                    
                      Increase the window size                       
                                                                     
                                                                     
                                                                     
                                                                     
                                                                     
                                                                     
[69x15]
