src/ui/snapshots/kvn_tui__ui__layout__tests__undersized_terminal_shows_resize_message_instead_of_ui@70x14.snap
---
source: src/ui/layout.rs
expression: output
---
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                          Terminal too small                          
                    Minimum: 70×15  Current: 70×14                    
                       Increase the window size
